@@ -1,3 +1,9 @@
+globus-gram-protocol (12.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Mon, 24 Feb 2014 23:01:14 -0500
+
 globus-gram-protocol (12.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
